--- a/package.json
+++ b/package.json
@@ -9,7 +9,18 @@
     "snowpack": "^3.0.1"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  }
+    "fbemitter": "^3.0.0",
+    "htm": "^3.0.4",
+    "navigo": "^8.11.1",
+    "preact": "^10.5.13",
+    "preact-compat": "^3.19.0"
+  },
+  "plugins": [
+    [
+      "transform-react-jsx",
+      {
+        "pragma": "h"
+      }
+    ]
+  ]
 }
